Update meta.yaml with new requirement

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - colorspacious >=1.1
     - scikit-image >=0.22
     - numba >=0.56
+    - pylabeladjust
     - requests
     - jinja2
 
