--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,8 @@ requirements:
     - pylabeladjust
     - requests
     - jinja2
+    - rcssmin >= 1.1.2
+    - rjsmin >= 1.2.2
 
 test:
   imports:
