--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,6 +18,7 @@ requirements:
   host:
     - python >=3.9
     - pip
+    - setuptools
   run:
     - python >=3.9
     - numpy >=1.21
@@ -31,6 +32,8 @@ requirements:
     - pylabeladjust
     - requests
     - jinja2
+    - rcssmin
+    - rjsmin
 
 test:
   imports:
