--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,10 +16,11 @@ build:
 
 requirements:
   host:
-    - python >=3.9
+    - python {{ python_min }}
     - pip
+    - setuptools
   run:
-    - python >=3.9
+    - python >={{ python_min }}
     - numpy >=1.21
     - matplotlib-base >=3.8
     - scikit-learn >=1.1
@@ -38,6 +39,7 @@ test:
   commands:
     - pip check
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
