--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,11 +16,11 @@ build:
 
 requirements:
   host:
-    - python {{ python_min }}
+    - python 3.10
     - pip
     - setuptools
   run:
-    - python >={{ python_min }}
+    - python >=3.10
     - numpy >=1.21
     - matplotlib-base >=3.8
     - scikit-learn >=1.1
@@ -39,7 +39,7 @@ test:
   commands:
     - pip check
   requires:
-    - python {{ python_min }}
+    - python 3.10
     - pip
 
 about:
